--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -33,6 +33,12 @@
 					<li>Crabmeat Avocado</li>
 					<li>Spicy Crabmeat</li>
 				</ol>
+			<li>Specialty Rolls</li>
+				<ol>
+					<li>Rainbow Roll</li>
+					<li>Spicy Rainbow Roll</li>
+					<li>Crunchy Roll</li>
+					<li>Spicy Crunchy Roll</li>
 			<li>
 	</body>
 	</html>
