--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -10,9 +10,9 @@
 		&nbsp;&nbsp;Morristown, NJ 07960<br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(908)-647-1853</p>
 		<h2> Come Celebrate! </h2>
-		<p> <abbr title="Sushi For Me">S.F.M.</abbr> was opened in June of 2009 and we are 
+		<p> <abbr title="Sushi For Me">S.F.M.</abbr>&hearts; was opened in June of 2009 and we are 
 		celebrating our 5 year anniversary. To celebrate, this month only, we are having
-		all of our specialty and regular rolls <em>50% OFF!</em></p>
+		all some our specialty and regular rolls <em>50% OFF!</em></p>
 		<h3>50% Off Menu</h3>
 		<ul>
 			<li>Regular Rolls</li>
@@ -33,12 +33,20 @@
 					<li>Crabmeat Avocado</li>
 					<li>Spicy Crabmeat</li>
 				</ol>
+				<br>
 			<li>Specialty Rolls</li>
 				<ol>
-					<li>Rainbow Roll</li>
-					<li>Spicy Rainbow Roll</li>
-					<li>Crunchy Roll</li>
-					<li>Spicy Crunchy Roll</li>
-			<li>
+					<li>Rainbow</li>
+					<li>Spicy Rainbow</li>
+					<li>Crunchy</li>
+					<li>Spicy Crunchy</li>
+					<li>Dragon</li>
+					<li>Spicy Dragon</li>
+					<li>Valentine</li>
+					<li>Spicy Valentine</li>
+					<li>Dynamite</li>
+					<li>Chef's Specialty</li>
+				</ol>
+		</ul>
 	</body>
 	</html>
