--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -12,8 +12,8 @@
 		<h2> Come Celebrate! </h2>
 		<p> <abbr title="Sushi For Me">S.F.M.</abbr>&hearts; was opened in June of 2009 and we are 
 		celebrating our 5 year anniversary. To celebrate, this month only, we are having
-		all some our specialty and regular rolls <em>50% OFF!</em></p>
-		<h3>50% Off Menu</h3>
+		<em>50% OFF</em> some our specialty and regular rolls!</p>
+		<h2>50% Off Menu</h2>
 		<ul>
 			<li>Regular Rolls</li>
 				<ol>
@@ -48,5 +48,9 @@
 					<li>Chef's Specialty</li>
 				</ol>
 		</ul>
+		<h3>Gallery</h3>
+		<img src="images/sushi1.jpg"
+			alt="Sushi with a friend"
+			title="Reuniting with a friend over sushi"/>
 	</body>
 	</html>
