--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Sushi For Me</title>
+		<ul>
+			<li><a href="#menu">50% Off Menu</li>
+			<li>
 	</head>
 	<body>
 		<h1>Sushi For Me &hearts;</h1>
@@ -13,7 +16,7 @@
 		<p> <abbr title="Sushi For Me">S.F.M.</abbr>&hearts; was opened in June of 2009 and we are 
 		celebrating our 5 year anniversary. To celebrate, this month only, we are having
 		<em>50% OFF</em> some our specialty and regular rolls!</p>
-		<h2>50% Off Menu</h2>
+		<h2 id="menu">50% Off Menu</h2>
 		<ul>
 			<li>Regular Rolls</li>
 				<ol>
@@ -32,6 +35,8 @@
 					<li>Spicy Salmon</li>
 					<li>Crabmeat Avocado</li>
 					<li>Spicy Crabmeat</li>
+					<li>Shrimp Tempura</li>
+					<li>Spicy Shrimp</li>
 				</ol>
 				<br>
 			<li>Specialty Rolls</li>
@@ -51,6 +56,7 @@
 		<h3>Gallery</h3>
 		<img src="images/sushi1.jpg"
 			alt="Sushi with a friend"
-			title="Reuniting with a friend over sushi"/>
+			title="Valentine Roll & Spicy Crunchy Roll"/>
+		<img src="
 	</body>
 	</html>
