--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -3,22 +3,25 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Sushi For Me</title>
-		<ul>
-			<li><a href="#menu">50% Off Menu</li>
-			<li>
+				
 	</head>
 	<body>
 		<h1>Sushi For Me &hearts;</h1>
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;723 Jeffrey Ave <br>
 		&nbsp;&nbsp;Morristown, NJ 07960<br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(908)-647-1853</p>
+		<ul>
+			<li><a href="#menu">50% Off Menu</a></li>
+				<ul>
+					<li><a href="#regular">Regular Rolls</a></li>
+					<li><a href="#specialty">Specialty Rolls</a></li>
 		<h2> Come Celebrate! </h2>
 		<p> <abbr title="Sushi For Me">S.F.M.</abbr>&hearts; was opened in June of 2009 and we are 
 		celebrating our 5 year anniversary. To celebrate, this month only, we are having
 		<em>50% OFF</em> some our specialty and regular rolls!</p>
 		<h2 id="menu">50% Off Menu</h2>
 		<ul>
-			<li>Regular Rolls</li>
+			<li><h4 id="regular">Regular Rolls</h4></li>
 				<ol>
 					<li>California</li>
 					<li>Philadelphia</li>
@@ -39,7 +42,7 @@
 					<li>Spicy Shrimp</li>
 				</ol>
 				<br>
-			<li>Specialty Rolls</li>
+			<li><h4 id="specialty">Specialty Rolls</h4></li>
 				<ol>
 					<li>Rainbow</li>
 					<li>Spicy Rainbow</li>
