--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -15,9 +15,13 @@
 				<ul>
 					<li><a href="#regular">Regular Rolls</a></li>
 					<li><a href="#specialty">Specialty Rolls</a></li>
+				</ul>
+			<li><a href="#gallery">Gallery</a></li>
+		</ul>
 		<h2> Come Celebrate! </h2>
 		<p> <abbr title="Sushi For Me">S.F.M.</abbr>&hearts; was opened in June of 2009 and we are 
-		celebrating our 5 year anniversary. To celebrate, this month only, we are having
+		celebrating our 5 year anniversary. <br>
+		To celebrate, this month only, we are having
 		<em>50% OFF</em> some our specialty and regular rolls!</p>
 		<h2 id="menu">50% Off Menu</h2>
 		<ul>
@@ -56,7 +60,10 @@
 					<li>Chef's Specialty</li>
 				</ol>
 		</ul>
-		<h3>Gallery</h3>
+		<h3 id="gallery">Gallery</h3>
+		
+		<a href="http://www.freeimages.com/browse.phtml?f=download&id=1057290" target="_blank"><img src="images/sushi2.jpg/></a>
+		
 		<img src="images/sushi1.jpg"
 			alt="Sushi with a friend"
 			title="Valentine Roll & Spicy Crunchy Roll"/>
