--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -61,8 +61,13 @@
 				</ol>
 		</ul>
 		<h3 id="gallery">Gallery</h3>
-		
-		<a href="http://www.freeimages.com/browse.phtml?f=download&id=1057290" target="_blank"><img src="images/sushi2.jpg/></a>
+		<figure>
+			<a href="http://www.freeimages.com/browse.phtml?f=download&id=1057290">
+			<img src="images/sushi2.jpg"
+				alt="Philadelphia Roll"
+				title="Philadelphia Roll"/></a>
+			<figcaption>Plated Philadelphia Roll</figcaption>
+		</figure>
 		
 		<img src="images/sushi1.jpg"
 			alt="Sushi with a friend"
