--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -68,10 +68,13 @@
 				title="Philadelphia Roll"/></a>
 			<figcaption>Plated Philadelphia Roll</figcaption>
 		</figure>
+		<figure>
+			<a href="http://i1274.photobucket.com/albums/y421/MonicaPerezFullSailUniversity/Sushi1_zpsc7c9c239.jpg">	
+			<img src="images/sushi1.jpg"
+				alt="Sushi with a friend"
+				title="Valentine Roll & Spicy Crunchy Roll"/>
+			<figcaption>In front: Valentine Roll & In back: Spicy Crunch Roll</figcaption>
+		</figure>
 		
-		<img src="images/sushi1.jpg"
-			alt="Sushi with a friend"
-			title="Valentine Roll & Spicy Crunchy Roll"/>
-		<img src="
 	</body>
 	</html>
