--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -72,7 +72,7 @@
 			<a href="http://i1274.photobucket.com/albums/y421/MonicaPerezFullSailUniversity/Sushi1_zpsc7c9c239.jpg">	
 			<img src="images/sushi1.jpg"
 				alt="Sushi with a friend"
-				title="Valentine Roll & Spicy Crunchy Roll"/>
+				title="Valentine Roll & Spicy Crunchy Roll"/></a>
 			<figcaption>In front: Valentine Roll & In back: Spicy Crunch Roll</figcaption>
 		</figure>
 		
