--- a/Perez-Monica-final-project1/index.html
+++ b/Perez-Monica-final-project1/index.html
@@ -11,11 +11,12 @@
 		&nbsp;&nbsp;Morristown, NJ 07960<br>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(908)-647-1853</p>
 		<ul>
-			<li><a href="#menu">50% Off Menu</a></li>
+			<li><a href="#menu">50% Off Menu</a>
 				<ul>
 					<li><a href="#regular">Regular Rolls</a></li>
 					<li><a href="#specialty">Specialty Rolls</a></li>
 				</ul>
+			</li>
 			<li><a href="#gallery">Gallery</a></li>
 		</ul>
 		<h2> Come Celebrate! </h2>
@@ -25,7 +26,7 @@
 		<em>50% OFF</em> some our specialty and regular rolls!</p>
 		<h2 id="menu">50% Off Menu</h2>
 		<ul>
-			<li><h4 id="regular">Regular Rolls</h4></li>
+			<li><h4 id="regular">Regular Rolls</h4>
 				<ol>
 					<li>California</li>
 					<li>Philadelphia</li>
@@ -45,8 +46,9 @@
 					<li>Shrimp Tempura</li>
 					<li>Spicy Shrimp</li>
 				</ol>
-				<br>
-			<li><h4 id="specialty">Specialty Rolls</h4></li>
+			</li>
+				
+			<li><h4 id="specialty">Specialty Rolls</h4>
 				<ol>
 					<li>Rainbow</li>
 					<li>Spicy Rainbow</li>
@@ -59,6 +61,7 @@
 					<li>Dynamite</li>
 					<li>Chef's Specialty</li>
 				</ol>
+			</li>
 		</ul>
 		<h3 id="gallery">Gallery</h3>
 		<figure>
